# openregulations.ai

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  modal_app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: analyze.yml  daily-agent.yml  deploy-cloudflare.yml  deploy-website.yml
src/agents/: comment_analyzer.py
src/autonomous/: agent.py
src/autonomous/config/: agent.yaml
src/autonomous/prompts/: analyze_docket.md  daily_scan.md  extract_themes.md
src/db/: __init__.py  client.py  embeddings.py  models.py
src/jobs/: __init__.py  analyze.py  embed.py  report.py  sync.py
src/orchestration/: graph.py  state.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20240201000000_initial_schema.sql
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/src/: main.js
website/src/components/: analysis.js  app.js  chat.js  search.js
website/src/data/: .gitkeep  index.json
website/src/lib/: api-client.js  utils.js  vector-db.js
website/src/styles/: main.css
website/worker/: README.md  index.js  wrangler.toml
